// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Radio snapshots with another props 1`] = `
<div>
  <div
    class="sc-bczSft kLwboj"
  >
    <input
      class="sc-gsnScm fiZOva"
      id="id1"
      name="group1"
      type="radio"
    />
    <label
      class="sc-dkzCjb eAeedi"
      for="id1"
    >
      TEXT
    </label>
  </div>
</div>
`;

exports[`Component: Radio snapshots with default props 1`] = `
<div>
  <div
    class="sc-bczSft kLwboj"
  >
    <input
      class="sc-gsnScm fiZOva"
      id="id1"
      name="group1"
      type="radio"
    />
    <label
      class="sc-dkzCjb eAeedi"
      for="id1"
    >
      Text
    </label>
  </div>
</div>
`;
